tests/ingress.yaml
---
# service pointing into nirvana
# required for test ingress definitions
apiVersion: v1
kind: Service
metadata:
  name: mikrotik-dns-operator-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mikrotik-dns-operator-test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikrotik-dns-operator-test-no-annotation
spec:
  rules:
  - host: mikrotik-dns-operator-test-no-annotation.hutter.cloud
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikrotik-dns-operator-test-single-host
  annotations:
    tooling.hutter.cloud/mikrotik-static-ip: 192.168.1.1
spec:
  rules:
  - host: mikrotik-dns-operator-test-single-host.hutter.cloud
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikrotik-dns-operator-test-multiple-hosts
  annotations:
    tooling.hutter.cloud/mikrotik-static-ip: 192.168.1.1
spec:
  rules:
  - host: mikrotik-dns-operator-test-1.hutter.cloud
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: mikrotik-dns-operator-test-2.hutter.cloud
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /
        pathType: Prefix
